--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -103,7 +103,7 @@ justify-content: space-around;margin-top: 50px;}
     </a>
   </div>
   <div class="card img-fluid" style="width:300px;height:300px">
-  <a href = "HealthCare.jsp">
+  <a href = "DoctConst.jsp">
     <img class="card-img-top" src="https://images.theconversation.com/files/304957/original/file-20191203-66986-im7o5.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=1200.0&fit=crop" alt="Card image" style="width:300px;height:300px">
     <span class="card-img-overlay">
      Doctor Consultation
