--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,7 +42,7 @@ justify-content: space-around;margin-top: 50px;}
             <li><a href="genmed.html">Generic Medicines</a></li>
           </ul>
         </li>
-        <li><a href="#">Consult Doctors</a></li>
+        <li><a href="DoctConst.jsp">Consult Doctors</a></li>
       </ul>
       <form class="navbar-form navbar-left" action="/action_page.php">
       <div class="input-group">
