Few files updated

--- a/src/main/webapp/view_cart.html
+++ b/src/main/webapp/view_cart.html
@@ -9,7 +9,6 @@
 <table border="1" 
            cellpadding="15">
 <th> 
-<td> Sl.no </td>
 <td> Item </td>
 <td> Rate </td>
 <td> Qty. </td>
@@ -27,10 +26,10 @@
 <td></td> 
 <td></td> 
 <td> Total </td>
-<td> amt </td>
+<td> Rs.xxxx </td>
 </table> 
-<form method="POST" action="logout.html"> 
-<input type="submit" name="sub" value="Proceed to Pay" > 
+<form method="POST" action="payment.html"> 
+<input type="submit" name="sub" value="Proceed to Purchase" > 
 </form>
 </body>
 </html>
