--- a/src/main/webapp/cardio.html
+++ b/src/main/webapp/cardio.html
@@ -1,24 +1,26 @@
 <html>
 <head>
-<title> View cart </title>
+<title> Cardiology </title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body>
-<p> <center> <b><u>CARDIOLOGY</u></b> </center></p>
+<p> <center> <h1><b><u>CARDIOLOGY</u></b></h1> </center></p>
 <table border="1" 
            cellpadding="15">
 <th> 
 <td> Doctor </td>
 <td> Degree </td>
 <td> Visiting Time </td>
+<td> Consultation Fees </td>
 <td> Book Consultation </td>
 </th>
-<form method="POST" action="logout.html"> 
+<form method="POST" action="payment.html"> 
 <tr> 
 <td> 1. </td>
 <td> Dr. A . Mukherjee </td>
 <td> MD </td>
 <td> 4:00pm - 6:00pm </td>
+<td> Rs. 800 </td>
 <td> <input type="submit" name="sub" value="Book Appointment" > </td>
 </tr>
 <tr> 
@@ -26,6 +28,22 @@
 <td> Dr. P . Chatterjee </td>
 <td> MD </td>
 <td> 6:30pm - 9:00pm </td>
+<td> Rs. 800 </td>
+<td> <input type="submit" name="sub" value="Book Appointment" > </td>
+</tr>
+<tr> 
+<td> 3. </td>
+<td> Dr. M . Ganguly </td>
+<td> MD </td>
+<td> 4:00pm - 6:00pm </td>
+<td> Rs. 1000 </td>
+<td> <input type="submit" name="sub" value="Book Appointment" > </td>
+</tr>
+<td> 3. </td>
+<td> Dr. G . Banerjee </td>
+<td> MD </td>
+<td> 4:00pm - 6:00pm </td>
+<td> Rs. 1200 </td>
 <td> <input type="submit" name="sub" value="Book Appointment" > </td>
 </tr>
 </form>
